00006192: More detailed error codes and messages in access rights info

--- a/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
@@ -55,9 +55,9 @@ no-content-found.no-struct.message = Die Seite ist entweder nicht vorhanden oder
 
 format.date=dd.MM.yyyy
 
-
 reason.area-settings-denies-creation=Die Berechtigungen am Bereichsdokument '{1}' verbieten das Erstellen neuer Seiten.
 reason.area-settings-denies-edit=Die Berechtigungen am Bereichsdokument '{1}' verbieten die Bearbeitung.
+reason.area-settings-denies-deletion=Die Berechtigungen am Bereichsdokument '{1}' verbieten das Löschen.
 reason.content-with-no-readaccess=Die Seite enth\u00E4lt Inhalte, auf die Sie keinen lesenden Zugriff haben 
 reason.database-settings-denies-deletions=Die Datenbankberechtigungen verbieten Ihnen das L\u00F6schen von Dokumenten.
 reason.database.you-need-to-be-author=Sie ben\u00F6tigen mindestens Autorenrechte in der Datenbank.
@@ -77,14 +77,17 @@ reason.no-more-languages=Es sind bereits Sprachversionen f\u00FCr alle Sprachen 
 reason.no-subpages-in-templates=Seitenvorlagen d\u00FCrfen keine Unterseiten besitzen
 reason.no-valid-license=Sie besitzen keine Lizenz.
 reason.pagetype-settings-denies-edit=Die Berechtigungen am Seitentyp '{1}' verbieten die Bearbeitung.
+reason.pagetype-settings-denies-deletion=Die Berechtigungen am Seitentyp '{1}' verbieten das Löschen.
 reason.struct-no-allowed-pagetypes=Es existieren keine Seitentypen, die Sie an dieser Strukturposition verwenden d\u00FCrfen.
 reason.struct-setting-denies-creation=Die Berechtigungen der Seite '{1}' verbieten das Erstellen neuer Seiten.
 reason.struct-settings-denies-creation=Die Berechtigungen der Seite '{1}' verbieten das Erstellen von Unterdokumenten.
 reason.struct-settings-denies-edit=Die Berechtigungen der Seite '{1}' verbieten die Operation.
+reason.struct-settings-denies-deletion=Die Berechtigungen der Seite '{1}' verbieten das Löschen.
 reason.unknown=Unbekannte Ursache
 reason.you-are-no-author=Das Dokument ist in nicht von Ihnen erstellt. Sie ben\u00F6tigen mindestens EDITOR-Rechte in der Datenbank, um das Dokument bearbeiten zu k\u00F6nnen.
 
-reason.pagerightsfilter-denies-edit=PageRightsFilter verbietet das Bearbeiten des Inhalts (in dieser Sprache)
+reason.pagerightsfilter-denies-edit=Der PageRightsFilter der Web-App verbietet das Bearbeiten der Inhaltsversion.
+reason.pagerightsfilter-denies-deletion=Der PageRightsFilter der Web-App verbietet das Löschen der Inhaltsversion.
 
 reason.protected-relation-denies-edit=Eine geschütze Relation auf {1} verbietet das Löschen.
 
