--- a/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
@@ -93,6 +93,8 @@ reason.protected-relation-denies-edit=Eine geschütze Relation auf {1} verbietet 
 
 reason.page.unknown=Eine der Unterseiten verbietet die Operation
 
+reason.database.acl-denies-deletion=Die ACL verbietet Ihnen das Löschen in dieser Website
+
 admin.workflows=Workflows
 admin.pagetypes=Seitentypen
 admin.areas=Bereiche
