--- a/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
@@ -71,7 +71,7 @@ reason.language-settings-denies-creation=Die Einstellungen in den Sprachdefiniti
 reason.language-settings-denies-deletion=Die Einstellungen der Spache erlauben das L\u00F6schen nicht.
 reason.language-settings-denies-edit=Die Einstellungen einer der Spachen erlauben das Bearbeiten nicht.
 reason.no-author=Sie ben\u00F6tigen mindestens Autorenrechte in der Datenbank. 
-reason.no-creations-in-trash=Sie k\u00F6nnen keine Dokumente im Papierkorb erstellen
+reason.no-creations-in-trash=Sie k\u00F6nnen keine Dokumente im Papierkorb erstellen.
 reason.no-edit-in-trash=Dokumente im Papierkorb k\u00F6nnen nicht bearbeitet werden.
 reason.no-more-languages=Es sind bereits Sprachversionen f\u00FCr alle Sprachen vorhanden, die Sie verwenden d\u00FCrfen.
 reason.no-subpages-in-templates=Seitenvorlagen d\u00FCrfen keine Unterseiten besitzen
@@ -91,9 +91,9 @@ reason.pagerightsfilter-denies-deletion=Der PageRightsFilter der Web-App verbiet
 
 reason.protected-relation-denies-edit=Eine geschütze Relation auf {1} verbietet das Löschen.
 
-reason.page.unknown=Eine der Unterseiten verbietet die Operation
+reason.page.unknown=Eine der Unterseiten verbietet die Operation.
 
-reason.database.acl-denies-deletion=Die ACL verbietet Ihnen das Löschen in dieser Website
+reason.database.acl-denies-deletion=Die ACL verbietet Ihnen das Löschen in dieser Website.
 
 admin.workflows=Workflows
 admin.pagetypes=Seitentypen
