--- a/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
@@ -1,65 +1,70 @@
+#Tue Mar 12 00:21:18 CET 2024
+none=Kein
+
+admin.areas=Bereiche
+admin.contents=Inhalte
+admin.languages=Sprachen
+admin.pagetypes=Seitentypen
+admin.trash=Papierkorb
+admin.workflows=Workflows
+
+content-properties.author=Autor
+content-properties.created=Erstellt
+content-properties.modified=Zuletzt ge\u00E4ndert
+content-properties.status=Status
+content-properties.status.a=<span style\="color\:red">archiviert</span>
+content-properties.status.g=<span style\="color\:red">zur Genehmigung</span>
+content-properties.status.p=ver\u00F6ffentlicht
+content-properties.status.pending=<span style\="color\:red">bevorstehend ...</span>
+content-properties.status.w=<span style\="color\:red">in Arbeit</span>
+content-properties.title=Titel
+content-properties.version=Version
+
+filetype.images=Bilder
+filetype.office-docs=Office Dokumente
+filetype.others=Andere
+filetype.pdf-docs=PDF Dokumente
+filetype.single.images=Bild
+filetype.single.office-docs=Office Dokument
+filetype.single.others=Bin\u00E4rdatei
+filetype.single.pdf-docs=PDF Dokument
+filetype.single.videos=Audio / Video
+filetype.videos=Audio / Videos
+
+format.date=dd.MM.yyyy
+
 login.database-not-found=App '{1}' konnte nicht ge\u00F6ffnet werden.
 login.init-db-design.needs-init-by-designer=Diese Contentstore muss zun\u00E4chst von einem Benutzer mit Manager-Rechten initialisiert werden.<br>Bitte melden Sie sich als Benutzer mit Manager-Rechten an ...
-login.login-blocked=Der Anmeldename '{1}' ist für die nächsten {2} Minuten aufgrund wiederholter erfolgloser Anmeldeversuche gesperrt. 
+login.login-blocked=Der Anmeldename '{1}' ist f\u00FCr die n\u00E4chsten {2} Minuten aufgrund wiederholter erfolgloser Anmeldeversuche gesperrt. 
 login.login-error=Anmeldefehler. Bitte pr\u00FCfen Sie Benutzername und Kennwort.
 login.please-login-as-author=Bitte melden sie sich als Autor an
 login.user-is-no-author=Benutzer '{1}' ist kein Autor der App '{2}'.
 login.user-is-no-designer=F\u00FCr diese App ben\u00F6tigen Sie mindestens Designer-Rechte.
 login.user-no-access=Benutzer '{1}' hat keine Leseberechtigung in App '{2}'.
 
-content-properties.title=Titel
-content-properties.created=Erstellt
-content-properties.modified=Zuletzt geändert
-content-properties.status=Status
+no-content-found.message=Die Seite '{1}' ist entweder nicht vorhanden oder Sie haben keine Leseberechtigung f\u00FCr diese Seite
+no-content-found.no-struct.message=Die Seite ist entweder nicht vorhanden oder Sie haben keine Leseberechtigung f\u00FCr diese Seite
+no-content-found.title=Die angeforderte Seite wurde nicht gefunden
 
-content-properties.status.a=<span style="color:red">archiviert</span>
-content-properties.status.p=veröffentlicht
-content-properties.status.w=<span style="color:red">in Arbeit</span>
-content-properties.status.g=<span style="color:red">zur Genehmigung</span>
-content-properties.status.pending=<span style="color:red">bevorstehend ...</span>
-
-content-properties.author=Autor
-
-filetype.images=Bilder
-filetype.office-docs=Office Dokumente
-filetype.others=Andere
-filetype.pdf-docs=PDF Dokumente
-filetype.videos=Audio / Videos
-
-filetype.single.images=Bild
-filetype.single.office-docs=Office Dokument
-filetype.single.pdf-docs=PDF Dokument
-filetype.single.videos=Audio / Video
-filetype.single.others=Binärdatei
-
-content-properties.version=Version
-
-none=Kein
+no-content.message=F\u00FCr die Seite '{1}' sind keine nichtarchivierten Inhalte in der Sprache '{2}' vorhanden.
+no-content.new-version-from-this=Neue Sprachversion aus dieser Version erstellen
+no-content.no-lang.message=F\u00FCr die Seite '{1}' sind keine nichtarchivierten Inhalte vorhanden.
+no-content.no-reader-message=Es liegt ein Inhalt in der Sprache <b>{1}</b> vor, Sie besitzen jedoch keine Leseberechtigung f\u00FCr diesen Inhalt.
+no-content.no-reader-title=Keine Leseberechtigung
+no-content.other-versions=Andere Versionen
+no-content.title=Keine Inhaltsseite vorhanden
 
 privileges.mayDeleteDocuments=Benutzer darf Dokumente l\u00F6schen.
 privileges.mayMoveDocuments=Benutzer darf Seiten verschieben.
 privileges.mayNotDeleteDocuments=Benutzer darf Dokumente <b>nicht</b> l\u00F6schen.
 privileges.mayNotMoveDocuments=Benutzer darf Seiten <b>nicht</b> verschieben.
 
-no-content-found.message=Die Seite '{1}' ist entweder nicht vorhanden oder Sie haben keine Leseberechtigung f\u00FCr diese Seite
-no-content-found.title=Die angeforderte Seite wurde nicht gefunden
-
-no-content.message=F\u00FCr die Seite '{1}' sind keine nichtarchivierten Inhalte in der Sprache '{2}' vorhanden.
-no-content.new-version-from-this=Neue Sprachversion aus dieser Version erstellen
-no-content.no-reader-message=Es liegt ein Inhalt in der Sprache <b>{1}</b> vor, Sie besitzen jedoch keine Leseberechtigung f\u00FCr diesen Inhalt.
-no-content.no-reader-title=Keine Leseberechtigung
-no-content.other-versions=Andere Versionen
-no-content.title=Keine Inhaltsseite vorhanden
-no-content.no-lang.message=F\u00FCr die Seite '{1}' sind keine nichtarchivierten Inhalte vorhanden.
-no-content-found.no-struct.message = Die Seite ist entweder nicht vorhanden oder Sie haben keine Leseberechtigung f\u00FCr diese Seite
-
-format.date=dd.MM.yyyy
-
 reason.area-settings-denies-creation=Die Berechtigungen am Bereichsdokument '{1}' verbieten das Erstellen neuer Seiten.
+reason.area-settings-denies-deletion=Die Berechtigungen am Bereichsdokument '{1}' verbieten das L\u00F6schen.
 reason.area-settings-denies-edit=Die Berechtigungen am Bereichsdokument '{1}' verbieten die Bearbeitung.
-reason.area-settings-denies-deletion=Die Berechtigungen am Bereichsdokument '{1}' verbieten das Löschen.
 reason.content-with-no-readaccess=Die Seite enth\u00E4lt Inhalte, auf die Sie keinen lesenden Zugriff haben 
 reason.database-settings-denies-deletions=Die Datenbankberechtigungen verbieten Ihnen das L\u00F6schen von Dokumenten.
+reason.database.acl-denies-deletion=Die Zugriffskontrollliste (ACL) der Website verbietet Ihnen das L\u00F6schen in dieser Website.
 reason.database.you-need-to-be-author=Sie ben\u00F6tigen mindestens Autorenrechte in der Datenbank.
 reason.database.you-need-to-be-editor=Sie ben\u00F6tigen mindestens Editorrechte in der Datenbank.
 reason.database.you-need-to-be-manager=Sie ben\u00F6tigen mindestens Chief-Editor-Rechte in der Datenbank.
@@ -76,34 +81,21 @@ reason.no-edit-in-trash=Dokumente im Papierkorb k\u00F6nnen nicht bearbeitet wer
 reason.no-more-languages=Es sind bereits Sprachversionen f\u00FCr alle Sprachen vorhanden, die Sie verwenden d\u00FCrfen.
 reason.no-subpages-in-templates=Seitenvorlagen d\u00FCrfen keine Unterseiten besitzen
 reason.no-valid-license=Sie besitzen keine Lizenz.
+reason.page.unknown=Eine der Unterseiten verbietet die Operation.
+reason.pagerightsfilter-denies-deletion=Der PageRightsFilter der Web-App verbietet das L\u00F6schen der Inhaltsversion.
+reason.pagerightsfilter-denies-edit=Der PageRightsFilter der Web-App verbietet das Bearbeiten der Inhaltsversion.
+reason.pagetype-settings-denies-deletion=Die Berechtigungen am Seitentyp '{1}' verbieten das L\u00F6schen.
 reason.pagetype-settings-denies-edit=Die Berechtigungen am Seitentyp '{1}' verbieten die Bearbeitung.
-reason.pagetype-settings-denies-deletion=Die Berechtigungen am Seitentyp '{1}' verbieten das Löschen.
+reason.protected-relation-denies-edit=Eine gesch\u00FCtze Relation auf {1} verbietet das L\u00F6schen.
 reason.struct-no-allowed-pagetypes=Es existieren keine Seitentypen, die Sie an dieser Strukturposition verwenden d\u00FCrfen.
 reason.struct-setting-denies-creation=Die Berechtigungen der Seite '{1}' verbieten das Erstellen neuer Seiten.
 reason.struct-settings-denies-creation=Die Berechtigungen der Seite '{1}' verbieten das Erstellen von Unterdokumenten.
+reason.struct-settings-denies-deletion=Die Berechtigungen der Seite '{1}' verbieten das L\u00F6schen.
 reason.struct-settings-denies-edit=Die Berechtigungen der Seite '{1}' verbieten die Operation.
-reason.struct-settings-denies-deletion=Die Berechtigungen der Seite '{1}' verbieten das Löschen.
 reason.unknown=Unbekannte Ursache
 reason.you-are-no-author=Das Dokument ist in nicht von Ihnen erstellt. Sie ben\u00F6tigen mindestens EDITOR-Rechte in der Datenbank, um das Dokument bearbeiten zu k\u00F6nnen.
-
-reason.pagerightsfilter-denies-edit=Der PageRightsFilter der Web-App verbietet das Bearbeiten der Inhaltsversion.
-reason.pagerightsfilter-denies-deletion=Der PageRightsFilter der Web-App verbietet das Löschen der Inhaltsversion.
-
-reason.protected-relation-denies-edit=Eine geschütze Relation auf {1} verbietet das Löschen.
-
-reason.page.unknown=Eine der Unterseiten verbietet die Operation.
-
-reason.database.acl-denies-deletion=Die ACL verbietet Ihnen das Löschen in dieser Website.
-
-admin.workflows=Workflows
-admin.pagetypes=Seitentypen
-admin.areas=Bereiche
-admin.languages=Sprachen
-admin.contents=Inhalte
-admin.trash=Papierkorb
 
 system-area.$templates=Seitenvorlagen ({1})
 system-area.$trash=Papierkorb CM-Classico ({1})
 system-area.$trash-cm-neo=Papierkorb CM-Neo ({1})
 system-area.hdb-system=HDB System ({1})
-
