--- a/OpenWGA/plugins/cm/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm/design/files/labels_de/general.properties
@@ -1,4 +1,4 @@
-#Thu Jul 27 13:46:29 CEST 2017
+#Tue Mar 12 00:20:25 CET 2024
 about=\u00DCber {1} Content Manager
 access=Berechtigung
 actions=Aktionen
@@ -65,6 +65,7 @@ mark-as-primary=Prim\u00E4re Datei setzen/zur\u00FCcksetzen
 metadata=Metadaten
 mirror-image-horizontal=Bild horizontal spiegeln
 mirror-image-vertical=Bild vertikal spiegeln
+module-style=Stil
 more=weitere
 new=Neu
 no-reader-access=keine Berechtigung
@@ -761,9 +762,11 @@ query-delete-field.msg=Feld '{1}' wirklich l\u00F6schen?
 query-delete-field.title=Feld l\u00F6schen
 
 reason.area-settings-denies-creation=Die Berechtigungen am Bereichsdokument '{1}' verbieten das Erstellen neuer Seiten.
+reason.area-settings-denies-deletion=Die Berechtigungen am Bereichsdokument '{1}' verbieten das L\u00F6schen.
 reason.area-settings-denies-edit=Die Berechtigungen am Bereichsdokument '{1}' verbieten die Bearbeitung.
 reason.content-with-no-readaccess=Die Seite enth\u00E4lt Inhalte, auf die Sie keinen lesenden Zugriff haben 
 reason.database-settings-denies-deletions=Die Datenbankberechtigungen verbieten Ihnen das L\u00F6schen von Dokumenten.
+reason.database.acl-denies-deletion=Die Zugriffskontrollliste (ACL) der Website verbietet Ihnen das L\u00F6schen in dieser Website.
 reason.database.you-need-to-be-author=Sie ben\u00F6tigen mindestens Autorenrechte in der Datenbank.
 reason.database.you-need-to-be-editor=Sie ben\u00F6tigen mindestens Editorrechte in der Datenbank.
 reason.database.you-need-to-be-manager=Sie ben\u00F6tigen mindestens Chief-Editor-Rechte in der Datenbank.
@@ -780,17 +783,18 @@ reason.no-edit-in-trash=Dokumente im Papierkorb k\u00F6nnen nicht bearbeitet wer
 reason.no-more-languages=Es sind bereits Sprachversionen f\u00FCr alle Sprachen vorhanden, die Sie verwenden d\u00FCrfen.
 reason.no-subpages-in-templates=Seitenvorlagen d\u00FCrfen keine Unterseiten besitzen
 reason.no-valid-license=Sie besitzen keine Lizenz.
+reason.pagerightsfilter-denies-deletion=Der PageRightsFilter der Web-App verbietet das L\u00F6schen der Inhaltsversion.
+reason.pagerightsfilter-denies-edit=PageRightsFilter verbietet das Bearbeiten des Inhalts (in dieser Sprache)
+reason.pagetype-settings-denies-deletion=Die Berechtigungen am Seitentyp '{1}' verbieten das L\u00F6schen.
 reason.pagetype-settings-denies-edit=Die Berechtigungen am Seitentyp '{1}' verbieten die Bearbeitung.
+reason.protected-relation-denies-edit=Eine gesch\u00FCtze Relation auf {1} verbietet das L\u00F6schen.
 reason.struct-no-allowed-pagetypes=Es existieren keine Seitentypen, die Sie an dieser Strukturposition verwenden d\u00FCrfen.
 reason.struct-setting-denies-creation=Die Berechtigungen am Strukturdokument '{1}' verbieten das Erstellen neuer Seiten.
 reason.struct-settings-denies-creation=Die Berechtigungen am Strukturdokument '{1}' verbieten das Erstellen von Unterdokumenten.
+reason.struct-settings-denies-deletion=Die Berechtigungen der Seite '{1}' verbieten das L\u00F6schen.
 reason.struct-settings-denies-edit=Die Berechtigungen am Strukturdokument '{1}' verbieten die Operation.
 reason.unknown=Unbekannte Ursache
 reason.you-are-no-author=Das Dokument ist in nicht von Ihnen erstellt. Sie ben\u00F6tigen mindestens EDITOR-Rechte in der Datenbank, um das Dokument bearbeiten zu k\u00F6nnen.
-
-reason.pagerightsfilter-denies-edit=PageRightsFilter verbietet das Bearbeiten des Inhalts (in dieser Sprache)
-
-reason.protected-relation-denies-edit=Eine geschütze Relation auf {1} verbietet das Löschen.
 
 rtf.alt=Alt
 rtf.border-width=Rahmenst\u00E4rke
@@ -942,5 +946,3 @@ validation.title=Inhalt mu\u00DF \u00FCberarbeitet werden
 versions.actuel-content-versions=Aktuelle Inhaltsversionen
 versions.other-languages=weitere Sprachen
 versions.title=Versionen
-
-module-style=Stil
