00006200: Improved message when page deletion is not allowed bc. of a read protected subpage

--- a/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-neo/design/files/labels_de/general.properties
@@ -1,4 +1,4 @@
-#Tue Mar 12 00:21:18 CET 2024
+#Mon Apr 08 10:56:06 CEST 2024
 none=Kein
 
 admin.areas=Bereiche
@@ -87,6 +87,7 @@ reason.pagerightsfilter-denies-edit=Der PageRightsFilter der Web-App verbietet d
 reason.pagetype-settings-denies-deletion=Die Berechtigungen am Seitentyp '{1}' verbieten das L\u00F6schen.
 reason.pagetype-settings-denies-edit=Die Berechtigungen am Seitentyp '{1}' verbieten die Bearbeitung.
 reason.protected-relation-denies-edit=Eine gesch\u00FCtze Relation auf {1} verbietet das L\u00F6schen.
+reason.struct-denies-deletion.readprotected-subpage=Die Seite enth\u00E4lt eine f\u00FCr Sie nicht sichtbare lesegesch\u00FCtze Unterseite.
 reason.struct-no-allowed-pagetypes=Es existieren keine Seitentypen, die Sie an dieser Strukturposition verwenden d\u00FCrfen.
 reason.struct-setting-denies-creation=Die Berechtigungen der Seite '{1}' verbieten das Erstellen neuer Seiten.
 reason.struct-settings-denies-creation=Die Berechtigungen der Seite '{1}' verbieten das Erstellen von Unterdokumenten.
