00006206: Added error handling for http error 400 and 412

--- a/OpenWGA/server/src/main/webapp/WEB-INF/web.xml
+++ b/OpenWGA/server/src/main/webapp/WEB-INF/web.xml
@@ -92,6 +92,14 @@
 		<location>/error.jsp</location>
 	</error-page>
 	<error-page>
+		<error-code>412</error-code>
+		<location>/error.jsp</location>
+	</error-page>
+	<error-page>
+		<error-code>400</error-code>
+		<location>/error.jsp</location>
+	</error-page>
+	<error-page>
 		<error-code>500</error-code>
 		<location>/error.jsp</location>
 	</error-page>
