00006226: Module form: added optional validation for field type "select"

--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -167,6 +167,7 @@ form.settings.validation.options.mail=,E-Mail|mail
 form.settings.validationmessage=Fehlermeldung
 form.validation.message.invalid-mail-address=Bitte geben Sie eine g\u00FCltige Mailadresse ein.
 form.validation.message.required=Bitte geben Sie einen Wert in '{1}' ein.
+form.validation.message.select.required=Bitte wählen Sie einen Wert in '{1}' aus.
 form.validationmessage.title=Bitte korrigieren Sie Ihre Eingabedaten
 
 format.date.jquery-tools.short=dd.mm.yyyy
