00006232: Module "Login": improved HTML and CSS

--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -296,7 +296,7 @@ module.latest-updates=Letzte Site-\u00C4nderungen
 module.login=Login
 module.login.label.password=Kennwort
 module.login.label.username=Benutzername
-module.login.username.validation=Bitte geben Sie einen Benutzername ein
+module.login.username.validation=Bitte geben Sie einen Benutzernamen ein
 module.login.you-are-loggedin-as=Sie sind angemeldet als
 module.overlay=Popup Overlay
 module.page=Seite
