00006250: Module "form": separated global form messages from field messages

--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -168,7 +168,7 @@ form.settings.validationmessage=Fehlermeldung
 form.validation.message.invalid-mail-address=Bitte geben Sie eine g\u00FCltige Mailadresse ein.
 form.validation.message.required=Bitte geben Sie einen Wert in '{1}' ein.
 form.validation.message.select.required=Bitte wählen Sie einen Wert in '{1}' aus.
-form.validationmessage.title=Bitte korrigieren Sie Ihre Eingabedaten
+form.validationmessage.title=Formular kann nicht gesendet werden.
 
 format.date.jquery-tools.short=dd.mm.yyyy
 format.date.long=EEEE dd. MMMM yyyy
