--- a/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
@@ -163,7 +163,7 @@ form.settings.validation.options.mail=,E-Mail|mail
 form.settings.validationmessage=Validation Message
 form.validation.message.invalid-mail-address=Please enter a valid mail address.
 form.validation.message.required=Please enter a value in '{1}'.
-form.validationmessage.title=Please correct your data
+form.validationmessage.title=Form can't be submitted.
 
 format.date.jquery-tools.short=yyyy/mm/dd
 format.date.long=EEEE, MMMM dd, yyyy
