00006275: DBCP: improved connection pool options and defaults

--- a/OpenWGA/libraries/wgapiJdbc/src/main/java/de/innovationgate/webgate/api/jdbc/modules/dbs/mssqlserver.properties
+++ b/OpenWGA/libraries/wgapiJdbc/src/main/java/de/innovationgate/webgate/api/jdbc/modules/dbs/mssqlserver.properties
@@ -29,4 +29,8 @@ option.SharedPool.MaxWait.title=Shared connection pool: Wait for connections
 option.SharedPool.MaxWait.description=Specifies the number of seconds a connection requests may wait for a connection to get available. When no connection gets available after this time the request is rejected.
 
 option.SharedPool.MaxConnectionLifetime.title=Shared connection pool: Maximum connection lifetime
-option.SharedPool.MaxConnectionLifetime.description=The maximum lifetime of a database server connection in milliseconds. After that time the connection will no more used for further requests and dropped once it returns to the pool.        
+option.SharedPool.MaxConnectionLifetime.description=The maximum permitted lifetime of a connection in milliseconds. A value of zero or less indicates an infinite lifetime.
+
+option.SharedPool.RemoveAbandonedTimeout.title=Shared connection pool: Remove Abandoned Timeout
+option.SharedPool.RemoveAbandonedTimeout.description=Timeout in seconds before an abandoned connection can be removed.
+
