--- a/OpenWGA/libraries/wgapiJdbc/src/main/java/de/innovationgate/webgate/api/jdbc/modules/dbs/mysqlserver.properties
+++ b/OpenWGA/libraries/wgapiJdbc/src/main/java/de/innovationgate/webgate/api/jdbc/modules/dbs/mysqlserver.properties
@@ -38,4 +38,7 @@ option.hibernate.connection.socketTimeout.title=Shared connection pool: Socket t
 option.hibernate.connection.socketTimeout.description=Milliseconds after which a yet unfinished operation on a network socket is cancelled.        
 
 option.SharedPool.MaxConnectionLifetime.title=Shared connection pool: Maximum connection lifetime
-option.SharedPool.MaxConnectionLifetime.description=The maximum lifetime of a database server connection in milliseconds. After that time the connection will no more used for further requests and dropped once it returns to the pool.        
+option.SharedPool.MaxConnectionLifetime.description=The maximum permitted lifetime of a connection in milliseconds. A value of zero or less indicates an infinite lifetime.        
+
+option.SharedPool.RemoveAbandonedTimeout.title=Shared connection pool: Remove Abandoned Timeout
+option.SharedPool.RemoveAbandonedTimeout.description=Timeout in seconds before an abandoned connection can be removed.
