--- a/OpenWGA/libraries/wgapiJdbc/src/main/java/de/innovationgate/webgate/api/jdbc/modules/dbs/mysqlserver.properties
+++ b/OpenWGA/libraries/wgapiJdbc/src/main/java/de/innovationgate/webgate/api/jdbc/modules/dbs/mysqlserver.properties
@@ -38,7 +38,7 @@ option.hibernate.connection.socketTimeout.title=Shared connection pool: Socket t
 option.hibernate.connection.socketTimeout.description=Milliseconds after which a yet unfinished operation on a network socket is cancelled.        
 
 option.SharedPool.MaxConnectionLifetime.title=Shared connection pool: Maximum connection lifetime
-option.SharedPool.MaxConnectionLifetime.description=The maximum permitted lifetime of a connection in milliseconds. A value of zero or less indicates an infinite lifetime.        
+option.SharedPool.MaxConnectionLifetime.description=The maximum permitted lifetime of a connection in milliseconds. After this time is exceeded the connection will fail the next activation, passivation or validation test. A value of zero or less indicates an infinite lifetime.        
 
 option.SharedPool.RemoveAbandonedTimeout.title=Shared connection pool: Remove Abandoned Timeout
-option.SharedPool.RemoveAbandonedTimeout.description=Timeout in seconds before an abandoned connection can be removed.
+option.SharedPool.RemoveAbandonedTimeout.description=Timeout in seconds before an abandoned connection can be removed. A connection is considered abandoned and eligible for removal if it has not been used for longer than this time.
