--- a/OpenWGA/libraries/wgapiJdbc/src/main/java/de/innovationgate/webgate/api/jdbc/modules/dbs/mysqlserver.properties
+++ b/OpenWGA/libraries/wgapiJdbc/src/main/java/de/innovationgate/webgate/api/jdbc/modules/dbs/mysqlserver.properties
@@ -42,3 +42,8 @@ option.SharedPool.MaxConnectionLifetime.description=The maximum permitted lifeti
 
 option.SharedPool.RemoveAbandonedTimeout.title=Shared connection pool: Remove Abandoned Timeout
 option.SharedPool.RemoveAbandonedTimeout.description=Timeout in seconds before an abandoned connection can be removed. A connection is considered abandoned and eligible for removal if it has not been used for longer than this time.
+
+option.SharedPool.minEvictableIdleTimeMillis.title=Shared connection pool: Minimum Evictable Idle Time
+option.SharedPool.minEvictableIdleTimeMillis.description=The minimum amount of time an object may sit idle in the pool before it is eligible for eviction by the idle object evictor
+
+
