00006298: Moved gobal server option CM.customLoginURL from CM-Classoci to WGA kernel.

--- a/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/serveroptions/various.properties
+++ b/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/serveroptions/various.properties
@@ -66,3 +66,6 @@ option.Server.EventManager.ThreadPoolSize.description=Maximum number of threads 
 
 option.Server.WebSockets.SessionWorkaround.title=Web Sockets: Enable session determination workaround
 option.Server.WebSockets.SessionWorkaround.description=Some WebSocket clients do not send HTTP session information along with the web socket handshake request, therefor making it impossible for OpenwGA to assign the socket to a user session. This workaround uses the sent session ID in request's URL parameters to find the correct session. This however may be a security breach as simply by choosing a valid session ID one may take over a foreign session. Enable this only if this kind of attack does not apply to your environment. 
+
+option.CM.customLoginURL.title=Content Manager: Custom login URL
+option.CM.customLoginURL.description=Defines a custom login URL for the OpenWGA Content Manager
