--- a/OpenWGA/plugins/cm/src/de/innovationgate/contentmanager/modules/serveroptions.properties
+++ b/OpenWGA/plugins/cm/src/de/innovationgate/contentmanager/modules/serveroptions.properties
@@ -1,5 +1,2 @@
-option.CM.customLoginURL.title=Content Manager: Custom login URL
-option.CM.customLoginURL.description=Defines a custom login URL for the OpenWGA Content Manager
-
-option.CM.dashboardTML.title=Content Manager: Dashboard TML
-option.CM.dashboardTML.description=Defines a custom TML for the dashboard in OpenWGA Content Manager. Format <dbkey>/<tml-name>
+option.CM.dashboardTML.title=CM-Classico Dashboard TML
+option.CM.dashboardTML.description=Defines a custom TML for the dashboard in CM-Classoco Content Manager. Format <dbkey>/<tml-name>
