00006356: Restructured MSSQL Database implementation

--- a/OpenWGA/libraries/wgapiJdbc/src/main/java/de/innovationgate/webgate/api/jdbc/modules/dbs/mssqlserver.properties
+++ b/OpenWGA/libraries/wgapiJdbc/src/main/java/de/innovationgate/webgate/api/jdbc/modules/dbs/mssqlserver.properties
@@ -34,3 +34,5 @@ option.SharedPool.MaxConnectionLifetime.description=The maximum permitted lifeti
 option.SharedPool.RemoveAbandonedTimeout.title=Shared connection pool: Remove Abandoned Timeout
 option.SharedPool.RemoveAbandonedTimeout.description=Timeout in seconds before an abandoned connection can be removed.
 
+option.SharedPool.minEvictableIdleTimeMillis.title=Shared connection pool: Minimum Evictable Idle Time
+option.SharedPool.minEvictableIdleTimeMillis.description=The minimum amount of time in milliseconds an object may sit idle in the pool before it is eligible for eviction by the idle object evictor
