--- a/OpenWGA/plugins/additional-script-langs/build.gradle
+++ b/OpenWGA/plugins/additional-script-langs/build.gradle
@@ -5,6 +5,14 @@ dependencies {
     compileClasspath project(":wgaBuildTools");
  	compileClasspath 'javax.servlet:javax.servlet-api:3.0.1'   
     
+    /*
+     * 00006376:
+     * wro4j 1.8 depends on and creates commons-compress 1.9
+     * AFW however needs verion 1.19
+     * To avoid conflicts we explizit compile this version 1.19 here 
+     */
+    compile 'org.apache.commons:commons-compress:1.19'
+    
     compile 'ro.isdc.wro4j:wro4j-core:1.8.0'
 	compile 'ro.isdc.wro4j:wro4j-extensions:1.8.0'
 }
