label: form.settings.no-mail-address

--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -124,20 +124,6 @@ filetype.others=Andere
 filetype.pdf-docs=PDF Dokument
 filetype.videos=Video
 
-flickr-album.settings.amount=Anzahl Bilder
-flickr-album.settings.from=Von
-flickr-album.settings.height=H\u00F6he
-flickr-album.settings.image-amount=Zeige Bilder (0 zeigt alle Bilder)
-flickr-album.settings.image-numbers=Zeige Bild (0 - 0 zeigt alle Bilder)
-flickr-album.settings.image-size=Gr\u00F6\u00DFe des Anzeige Bild
-flickr-album.settings.image-size-options=Klein (240px)|m,Mittel (640px)|z,Gro\u00DF (1024px)|b
-flickr-album.settings.images-options=aus einem Album|album,von einem User|user
-flickr-album.settings.noapikey=<b>API-Key fehlt</b><br>Zur Verwendung dieses Moduls, ben\u00F6tigen Sie einen <a href\="http\://www.flickr.com/services/api/keys/" target\="_blank" title\="Flickr API-Key">Flickr API-Key</a>. Diesen m\u00FCssen Sie im Admin Client im Bereich "Content Modules" eintragen.
-flickr-album.settings.preview-size=Gr\u00F6\u00DFe der Vorschau
-flickr-album.settings.show-images=Zeige Bilder
-flickr-album.settings.to=Bis
-flickr-album.settings.width=Breite
-
 form.captcha.refresh=Klicken Sie hier, um das Bild zu erneuern
 form.captcha.settings.hint=Hinweis
 form.settings.action=Aktion
@@ -169,6 +155,7 @@ form.validation.message.invalid-mail-address=Bitte geben Sie eine g\u00FCltige M
 form.validation.message.required=Bitte geben Sie einen Wert in '{1}' ein.
 form.validation.message.select.required=Bitte wählen Sie einen Wert in '{1}' aus.
 form.validationmessage.title=Formular kann nicht gesendet werden.
+form.settings.no-mail-address=Modul-Konfiguration: Keine Mailadresse angegeben
 
 format.date.jquery-tools.short=dd.mm.yyyy
 format.date.long=EEEE dd. MMMM yyyy
@@ -276,7 +263,6 @@ module.drag-drop-box=Frei positioniert
 module.fieldset=Fieldset
 module.flash=Flash
 module.flash-file=Flash Datei (SWF)
-module.flickr-album=Flickr-Album
 module.form=Formular
 module.formfield=Formular-Feld
 module.google-map=Google Map
