--- a/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_en/general.properties
@@ -120,20 +120,6 @@ filetype.others=Other
 filetype.pdf-docs=PDF Document
 filetype.videos=Video
 
-flickr-album.settings.amount=Number of images
-flickr-album.settings.from=From
-flickr-album.settings.height=Height
-flickr-album.settings.image-amount=Show Images (0 shows all images)
-flickr-album.settings.image-numbers=Show Image (0 - 0 shows all images)
-flickr-album.settings.image-size=Image size
-flickr-album.settings.image-size-options=Small (240px)|m,Medium (640px)|z,Large (1024px)|b
-flickr-album.settings.images-options=From Album|album,From User|user
-flickr-album.settings.noapikey=<b>API Key missing</b><br>To use this module, you will need a  <a href\="http\://www.flickr.com/services/api/keys/" target\="_blank" title\="Flickr API-Key">Flickr API-Key</a>. You must enter the key in the Adminclient in the area "Content Modules.
-flickr-album.settings.preview-size=Preview size
-flickr-album.settings.show-images=Show Images
-flickr-album.settings.to=To
-flickr-album.settings.width=Width
-
 form.captcha.refresh=Click to refresh image
 form.captcha.settings.hint=Hint
 form.settings.action=Action
@@ -164,6 +150,7 @@ form.settings.validationmessage=Validation Message
 form.validation.message.invalid-mail-address=Please enter a valid mail address.
 form.validation.message.required=Please enter a value in '{1}'.
 form.validationmessage.title=Form can't be submitted.
+form.settings.no-mail-address=Modul-Configuration: No mail address specified
 
 format.date.jquery-tools.short=yyyy/mm/dd
 format.date.long=EEEE, MMMM dd, yyyy
@@ -264,7 +251,6 @@ module.downloads=Downloads
 module.fieldset=Fieldset
 module.flash=Flash
 module.flash-file=Flash File (SWF)
-module.flickr-album=Flickr-Album
 module.form=Form
 module.formfield=Form Field
 module.google-map=Google Map
