--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -209,8 +209,8 @@ html5media.webm-video-file=WebM Video (Firefox/Opera)
 
 image.click=Aktion bei Klick
 image.img-mouse-over=Mouse-Over Bild
-image.setting.link.options=interner Link|int,externer Link|ext
-image.settings.click-options=keine|nothing,Lightbox|zoom,Link|link,Datei \u00F6ffnen|open
+image.setting.link.options=Interner Link|int,Externer Link|ext,Link auf eine Datei dieser Seite|intfile,Mail|mailto
+image.settings.click-options=keine|nothing,Lightbox|zoom,Link|link,Diese Bild-Datei \u00F6ffnen|open
 image.settings.database=App / Sprache / Dokument
 image.settings.datasource=Datenquelle
 image.settings.descriptions.options=Titel / ALT-Text|title,Copyright|copyright,Beschreibung|description,Eigener Untertitel|subtitle
