Added missing info for P-Option PPRCacheEntries

--- a/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/poptions/poptions_database.properties
+++ b/OpenWGA/libraries/wga/src/main/java/de/innovationgate/wgpublisher/modules/poptions/poptions_database.properties
@@ -26,4 +26,7 @@ option.ExternalFileServingEnabled.title=External file serving enabled
 option.ExternalFileServingEnabled.description=Enable or disable external file serving for this database.
 
 option.PublishContentFilesWithDesignEncoding.title=Publish content files with design encoding
-option.PublishContentFilesWithDesignEncoding.description=This is a legacy setting which controls, if the design encoding of an app is also used to read textual files that are stored on the content of that app, so they can be transcoded to the servers output encoding. This will break the files contents if its encoding does not match the design encoding. If this is false then textual files on contents will be put out in their original encoding without transcoding. OpenWGA will however still declare the output charset to be its default output encoding. 
+option.PublishContentFilesWithDesignEncoding.description=This is a legacy setting which controls, if the design encoding of an app is also used to read textual files that are stored on the content of that app, so they can be transcoded to the servers output encoding. This will break the files contents if its encoding does not match the design encoding. If this is false then textual files on contents will be put out in their original encoding without transcoding. OpenWGA will however still declare the output charset to be its default output encoding.
+
+option.PPRCacheEntries.title=Post-Process-Resource Cache Entries
+option.PPRCacheEntries.description=Maximal number of entries to be put into post process resource cache.
