00006428: Module accordion: added option to open multiple pages

--- a/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
+++ b/OpenWGA/plugins/cm-modules/design/files/labels_de/general.properties
@@ -25,7 +25,7 @@ year=Jahr
 
 accordion.settings.effect-speed=Effekt Geschwindigkeit
 accordion.settings.effect-speed-options=schnell|fast,langsam|slow
-accordion.settings.expand.first-section-options=Ersten Abschnitt anzeigen|true
+accordion.settings.expand.first-section-options=Ersten Abschnitt öffnen|true
 
 align.options=Rechts|right,Links|left
 
